# velo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  com.velomail.app.desktop  com.velomail.app.metainfo.xml  com.velomail.app.yml  package-lock.json  package.json  release-please-config.json  splashscreen.html  tsconfig.json  velo.spec  vite.config.ts  vitest.config.ts
.dish/: workspace-id
docs/: architecture.md  development.md  keyboard-shortcuts.md
landing/: index.html  package-lock.json  package.json  wrangler.jsonc
landing/public/: og-image.html  robots.txt  sitemap.xml
landing/src/: App.tsx  index.css
src/: App.tsx  ComposerWindow.tsx  ThreadWindow.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  oauth.rs
src-tauri/src/imap/: client.rs  types.rs
src-tauri/src/smtp/: client.rs  types.rs
src/config/: tauriConfig.test.ts
src/constants/: helpContent.test.ts  helpContent.ts  shortcuts.test.ts  shortcuts.ts  themes.test.ts  themes.ts
src/hooks/: useClickOutside.ts  useContextMenu.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useRouteNavigation.test.ts  useRouteNavigation.ts
src/i18n/: config.ts
src/router/: index.ts  navigate.test.ts  navigate.ts  routeTree.tsx
src/services/: backgroundCheckers.test.ts  backgroundCheckers.ts  badgeManager.ts  deepLinkHandler.ts  emailActions.test.ts  emailActions.ts  globalShortcut.ts  updateManager.test.ts  updateManager.ts
src/stores/: accountStore.test.ts  accountStore.ts  composerStore.test.ts  composerStore.ts  contextMenuStore.test.ts  contextMenuStore.ts  labelStore.test.ts  labelStore.ts  shortcutStore.ts  smartFolderStore.test.ts  (+7 more)
(+355 files in other folders)
